VR scene inspection - crash with view layers #79324

Closed
opened 2020-07-27 17:43:24 +02:00 by Zsolt Stefan · 6 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: TITAN X (Pascal)/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.87

Blender Version
Broken: version: 2.90.0 Beta, branch: master, commit date: 2020-07-26 20:02, hash: 04195b1e74
Worked: -

Short description of error
I had consistent crashes on some of my files when starting a VR sessing in the VR scene inspection addon. After some experimenting I've narrowed it down to the following two bugs:

Bug #1. Starting the VR session only works when using the first view layer (the one at the top of the view layer list). If you have any other view layer active, and click on "Start VR Session", Blender crashes.

Bug #2. If you do start the session in the first view layer, you cannot switch to another view layer inside the VR session. If you activate another one, the 3D viewport switches over, but the VR-glasses still show the old one.
This unfortunately defeats the purpose of having view layers to show/hide predefined sets of collections/objects.

Exact steps for others to reproduce the error

  • Activate VR scene inspection addon
  • Add a new view layer (settings don't matter), and stay in it
  • Click on "Start VR Session" --> crash

OR

  • Add a new view layer, add some objects
  • activate first view layer
  • Start VR session
  • activate second view layer --> nothing changes in VR
**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: TITAN X (Pascal)/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.87 **Blender Version** Broken: version: 2.90.0 Beta, branch: master, commit date: 2020-07-26 20:02, hash: `04195b1e74` Worked: - **Short description of error** I had consistent crashes on some of my files when starting a VR sessing in the VR scene inspection addon. After some experimenting I've narrowed it down to the following two bugs: Bug #1. Starting the VR session only works when using the first view layer (the one at the top of the view layer list). If you have any other view layer active, and click on "Start VR Session", Blender crashes. Bug #2. If you do start the session in the first view layer, you cannot switch to another view layer inside the VR session. If you activate another one, the 3D viewport switches over, but the VR-glasses still show the old one. This unfortunately defeats the purpose of having view layers to show/hide predefined sets of collections/objects. **Exact steps for others to reproduce the error** - Activate VR scene inspection addon - Add a new view layer (settings don't matter), and stay in it - Click on "Start VR Session" --> crash OR - Add a new view layer, add some objects - activate first view layer - Start VR session - activate second view layer --> nothing changes in VR
Author

Added subscriber: @ZsoltStefan

Added subscriber: @ZsoltStefan

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel

This issue was referenced by fa2a13bcb9

This issue was referenced by fa2a13bcb958ee038ab85c4a413282accceedd1f

This issue was referenced by 9c093a5d9a

This issue was referenced by 9c093a5d9ac43a103f81d91f9f32ec5efccaff6a
Member

This is not an issue in the Add-on but its C backend.

I never took the time to properly implement proper view-layer handling.

This is not an issue in the Add-on but its C backend. I never took the time to properly implement proper view-layer handling.
Member

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Julian Eisel self-assigned this 2020-08-10 17:40:08 +02:00
Thomas Dinges added this to the 2.90 milestone 2023-02-08 16:26:15 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#79324
No description provided.